--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<title>
+    Hund sida
+</title>
+<link rel="stylesheet" href="/CSS/style.css">
 </head>
 
 <body>
