--- a/Index.html
+++ b/Index.html
@@ -13,11 +13,11 @@
 </head>
 <body>  
     <!-- Header innehåller semantik web och container används för att skriva in mitten och lämna glappar sidorna. Syns bättre.-->
-   <header class="container">
+   <header>
        <!--Nav för att skapa en menu -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <!-- to make an company name to emphesis it
+        <div class="container">
+            <!-- to make an company name to emphasise it
                 we can put a dog image or icon
  <a class="navbar-brand" href="#">
      <img src="/img/logo.svg" alt="Hunds logo" width="30" height="24" class="d-inline-block align-text-top">
@@ -31,7 +31,7 @@
           <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#"><img src="img/dog-face.ico" style="width: 20px;"> Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/ourdogs.html">Our dogs</a>
@@ -49,14 +49,37 @@
    </header>
 <main >
 <div class="container">
-    <div class="row">
+    <div class="row">     
         <div class="col-md-12 col-sm-8">
-            <div class="card">
-                <div class="card-body">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore minus eum aliquid quia velit aliquam quos. Consequatur cumque totam minus minima rem dolores! Inventore illo reprehenderit quas, atque culpa veniam dolorem rerum alias iste voluptates impedit dignissimos quos nostrum ullam accusamus maxime tempora dicta iure harum nobis architecto minima molestiae? Ullam, at. Natus ipsum provident necessitatibus quasi temporibus qui sit perspiciatis quis alias dicta impedit a vel perferendis totam voluptatum nemo expedita error veniam, odit porro sed velit. Pariatur corrupti incidunt libero doloremque? Voluptas est ea aliquid ex laborum deleniti minus obcaecati sit, eum cupiditate sequi, sint a ipsum distinctio?
-                </div>
+          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="http://via.placeholder.com/640x360" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="http://via.placeholder.com/640x360" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="http://via.placeholder.com/640x360" class="d-block w-100" alt="...">
+              </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
+        <div class="col-md-12 col-sm-8">
+          <div class="card">
+              <div class="card-body">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore minus eum aliquid quia velit aliquam quos. Consequatur cumque totam minus minima rem dolores! Inventore illo reprehenderit quas, atque culpa veniam dolorem rerum alias iste voluptates impedit dignissimos quos nostrum ullam accusamus maxime tempora dicta iure harum nobis architecto minima molestiae? Ullam, at. Natus ipsum provident necessitatibus quasi temporibus qui sit perspiciatis quis alias dicta impedit a vel perferendis totam voluptatum nemo expedita error veniam, odit porro sed velit. Pariatur corrupti incidunt libero doloremque? Voluptas est ea aliquid ex laborum deleniti minus obcaecati sit, eum cupiditate sequi, sint a ipsum distinctio?
+              </div>
+          </div>
+      </div>
         <div class="row">
             <div class="col-md-12 col-sm-8">our last dogs</div>
             <div class="col-md-12 col-sm-8">blog notes</div>
