--- a/organisation.html
+++ b/organisation.html
@@ -15,7 +15,43 @@
   <link rel="stylesheet" href="/css/bootstrap-grid.css">
 </head>
 <body>
-
+    <header>
+        <!--Nav för att skapa en menu -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container">
+            <!-- to make an company name to emphasise it
+                    we can put a dog image or icon
+     <a class="navbar-brand" href="#">
+         <img src="/img/logo.svg" alt="Hunds logo" width="30" height="24" class="d-inline-block align-text-top">
+        Dogs
+    </a>
+                -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#SmallScreenNavigationBar" aria-controls="SmallScreenNavigationBar" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <!-- Den här span användes för när skärmen är mindre visas menun i mindre form med en toggle knappt-->
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="/Index.html" href="#"><img src="img/dog-face.ico" style="width: 20px;">
+                    Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/ourdogs.html">Our dogs</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/aboutus.html">Who we are</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/blog.html">Blog</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
 <div class="container p-5 my-5 bg-dark text-white text-center">
   <h1>Organisation</h1>
   <p>Our coworkers</p> 
