Skapade länkar till arbetarnas profiler

--- a/erika.html
+++ b/erika.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Organisation</title>
+  <title>Erika's profile</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -9,7 +9,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hund sida</title>
+  <title>Erika's profile</title>
   <link rel="stylesheet" href="/css/bootstrap.css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/bootstrap-grid.css">
@@ -46,46 +46,12 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/blog.html">Blog</a>
-                <li>
-                  <li class="nav-item">
+                  <li>
+                    <li class="nav-item">
                     <a class="nav-link" href="/organisation.html">Organisation</a>
-                </li>
                 </li>
               </ul>
             </div>
           </div>
         </nav>
       </header>
-<div class="container p-5 my-5 bg-dark text-white text-center">
-  <h1>Organisation</h1>
-  <p>Our coworkers</p> 
-</div>
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-sm-4 bg-dark text-white">
-      <h3>Karl</h3>
-      <a href="/karl.html">
-      <img src="/img/kalle.jpg" class="rounded" alt="Cinque Terre" width="300px" height="450px"></a>
-      <p>Karl som förutom intresset för hundar brinner för att hålla trädgården i snyggt skick</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-    <div class="col-sm-4 bg-dark text-white">
-      <h3>Erika</h3>
-      <a href="/erika.html">
-      <img src="/img/erica.jpg" class="rounded" alt="Cinque Terre" width="300px" height="450px"></a>
-      <p>Erika som brukar mecka med gamla amerikanska bilar när hon inte håller på med hundarna</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-    <div class="col-sm-4 bg-dark text-white">
-      <h3>Egon</h3>  
-      <a href="/egon.html">      
-      <img src="/img/egon.jpg" class="rounded" alt="Cinque Terre" width="350px" height="450px"></a>
-      <p>jobbar pluggar på teknik på gymnasiet och egentligen är ganska trött på alla hundar</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-  </div>
-</div>
-
-
-</body>
-</html>
