--- a/aboutus.html
+++ b/aboutus.html
@@ -1,1 +1,106 @@
-about us
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kontakt</title>
+  <link rel="stylesheet" href="/css/bootstrap.css">
+  <link rel="stylesheet" href="/css/bootstrap-grid.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="img/dog-face.ico">
+  <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+  <meta name="author" content="Simon Björnfors">
+</head>
+
+<body>
+  <!-- Header innehåller semantik web och container används för att skriva in mitten och lämna glappar sidorna. Syns bättre.-->
+  <header>
+    <!--Nav för att skapa en menu -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <!-- to make an company name to emphasise it
+                we can put a dog image or icon
+ <a class="navbar-brand" href="#">
+     <img src="/img/logo.svg" alt="Hunds logo" width="30" height="24" class="d-inline-block align-text-top">
+    Dogs
+</a>
+            -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#SmallScreenNavigationBar" aria-controls="SmallScreenNavigationBar" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <!-- Den här span användes för när skärmen är mindre visas menun i mindre form med en toggle knappt-->
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/"><img src="img/dog-face.ico" style="width: 20px;">
+                Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/ourdogs.html">Our dogs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Who we are</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/blog.html">Blog</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section class="container">
+      <div class="col-md-12">
+        <h2>Kontakt</h2>
+        <div id="map"></div>
+    </div>
+      <form action="" class="row g-3">
+        <div class="col-md-6">
+          <label for="firstName" class="form-label">Förnamn</label>
+          <input type="text" class="form-control" id="firstName" required>
+        </div>
+        <div class="col-md-6">
+          <label for="lastName" class="form-label">Efternamn</label>
+          <input type="text" class="form-control" id="lastName" required>
+        </div>
+        <div class="col-md-8">
+          <label for="emailAddress" class="form-label">Email</label>
+          <input type="text" class="form-control" id="emailAddress" required>
+        </div>
+        <div class="col-md-4">
+          <label for="phone" class="form-label">Telefonnummer</label>
+          <input type="tel" class="form-control" id="phone">
+        </div>
+        <div class="col-md-12">
+          <label for="message" class="form-label">Meddelande</label>
+          <textarea name="" id="message" rows="3" class="form-control" required></textarea>
+        </div>
+        <div class="col-md-12">
+          <button class="btn btn-primary">Skicka</button>
+        </div>
+    </form>
+  </main>
+  <footer>
+
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+  <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+
+  <script>
+      mapboxgl.accessToken = 'pk.eyJ1Ijoic2NobGViZW4iLCJhIjoiY2t4ZW8xdmE0MGJiYTJ3bnB0dXI5ajcxYiJ9.UFjjYeNSGz5w4AAL9t9y_Q';
+      var map = new mapboxgl.Map({
+      container: 'map',
+      style: 'mapbox://styles/mapbox/streets-v11',
+      center: [-71.060982, 42.35725],
+      zoom: 18,
+      });
+  </script>
+</body>¨
+</html>
