--- a/aboutus.html
+++ b/aboutus.html
@@ -12,6 +12,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="img/dog-face.ico">
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
   <meta name="author" content="Simon Björnfors">
+  <!-- Ikoner till footer -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 
@@ -91,6 +92,7 @@
         </form>
     </section>
   </main>
+  
 <footer class="p-5">
   <div class="container">
     <div class="row g-3">
