--- a/aboutus.html
+++ b/aboutus.html
@@ -57,9 +57,9 @@
   </header>
   <main>
     <section class="container">
-      <div class="col-md-12">
-        <h2 class="text-center">Kontaktsida</h2>
-        <h3 class="text-center text-md-start">Karta <i class="bi bi-geo-alt"></i></h3>
+
+      <div class="col-md-12 mt-5">
+        <h3 class="text-center text-md-start">Hitta till oss <i class="bi bi-geo-alt"></i></h3>
         <div id="map"></div>
       </div>
         <form class="row g-3">
@@ -84,7 +84,7 @@
           </div>
           <div class="col-md-12">
             <label for="message" class="form-label">Meddelande</label>
-            <textarea id="message" rows="3" class="form-control" required></textarea>
+            <textarea id="message" rows="6" class="form-control" required></textarea>
           </div>
           <div class="col-md-12 text-center text-md-start">
             <button class="btn btn-primary">Skicka</button>
@@ -92,7 +92,7 @@
         </form>
     </section>
   </main>
-  
+
 <footer class="p-5">
   <div class="container">
     <div class="row g-3">
