--- a/ourdogs.html
+++ b/ourdogs.html
@@ -48,7 +48,26 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="column">
+                    <div class="col-4 mt-4">
+                        <img src="img/valp1.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
+                        <div class="image-text text-center">
+                           <h3>Lorem, ipsum.</h3>
+                           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, ab.</p>
+                        </div>
+                    </div>
+                    <div class="col-4 mt-4">
+                        <img src="img/valp2.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
+                        <div class="image-text text-center">
+                           <h3>Lorem, ipsum.</h3>
+                           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, laboriosam.</p>
+                        </div>
+                    </div>
+                    <div class="col-4 mt-4">
+                        <img src="img/valp3.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
+                        <div class="image-text text-center">
+                           <h3>Lorem, ipsum.</h3>
+                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, soluta.</p>
+                        </div>
                     </div>
                 </div>
             </div>
