--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,35 @@
-blog
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blogsidan</title>
+    <link rel="stylesheet" href="/CSS/bootstrap.css" />
+    <link rel="stylesheet" href="/CSS/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <p>navbar ska vara här</p>
+    </div>
+    <div class="row">
+      <nav class="sidebar col-md-3 col-lg-2 p-0">
+        <div>
+          <h4 class="sidebar-heading px-3 mb-1 pb-2 mt-5">
+            <span>Blog posts</span>
+          </h4>
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a href="#blog1"> Inlägg 1 </a>
+            </li>
+            <li class="nav-item">
+              <a href="#blog2"> Inlägg 2 </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      
+    </div>
+  </body>
+</html>
