Lägger till 2 test blogg inlägg

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,28 @@
         </div>
       </nav>
 
-      
+      <main class="col-md-9 col-lg-10 ml-sm-auto px-md-4 mt-4">
+
+        <section id="blog1">
+            <h2>Inlägg 1</h2>
+            <div>
+                <p>
+                    Här är lite text för inlägg nummer 1
+                </p>
+            </div>
+        </section>
+
+        <section id="blog2">
+            <h2>Inlägg 2</h2>
+            <div>
+                <p>
+                    Här är lite text för inlägg nummer 2
+                </p>
+            </div>
+        </section>
+
+      </main>
+
     </div>
   </body>
 </html>
