Lägger till 2 blogg items

--- a/blog.html
+++ b/blog.html
@@ -25,32 +25,45 @@
             <li class="nav-item">
               <a href="#blog2"> Inlägg 2 </a>
             </li>
+            <li class="na-item">
+              <a href="#blog3"> Inlägg 3</a>
+            </li>
+            <li class="na-item">
+              <a href="#blog4"> Inlägg 4</a>
+            </li>
           </ul>
         </div>
       </nav>
 
       <main class="col-md-9 col-lg-10 ml-sm-auto px-md-4 mt-4">
-
         <section id="blog1">
-            <h2>Inlägg 1</h2>
-            <div>
-                <p>
-                    Här är lite text för inlägg nummer 1
-                </p>
-            </div>
+          <h2>Inlägg 1</h2>
+          <div>
+            <p>Här är lite text för inlägg nummer 1</p>
+          </div>
         </section>
 
         <section id="blog2">
-            <h2>Inlägg 2</h2>
-            <div>
-                <p>
-                    Här är lite text för inlägg nummer 2
-                </p>
-            </div>
+          <h2>Inlägg 2</h2>
+          <div>
+            <p>Här är lite text för inlägg nummer 2</p>
+          </div>
         </section>
 
-      </main>
+        <section id="blog3">
+          <h2>Inlägg 3</h2>
+          <div>
+            <p>Här är lite text för inlägg nummer 2</p>
+          </div>
+        </section>
 
+        <section id="blog4">
+          <h2>Inlägg 4</h2>
+          <div>
+            <p>Här är lite text för inlägg nummer 2</p>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
