--- a/blog.html
+++ b/blog.html
@@ -8,10 +8,42 @@
     <link rel="stylesheet" href="/CSS/bootstrap.css" />
     <link rel="stylesheet" href="/CSS/style.css" />
   </head>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#SmallScreenNavigationBar"
+          aria-controls="SmallScreenNavigationBar"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"
+                ><img src="img/dog-face.ico" style="width: 20px" /> Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/ourdogs.html">Our dogs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/aboutus.html">Who we are</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/blog.html">Blog</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
   <body>
-    <div class="container">
-      <p>navbar ska vara här</p>
-    </div>
     <div class="row">
       <nav class="sidebar col-md-3 col-lg-2 p-0">
         <div>
