La till så Blogposts menyn är sticky

--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
     <title>Blogsidan</title>
     <link rel="stylesheet" href="/CSS/bootstrap.css" />
     <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="stylesheet" href="/CSS/blog.css">
   </head>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -46,7 +47,7 @@
   <body>
     <div class="row">
       <nav class="sidebar col-md-3 col-lg-2 p-0">
-        <div>
+        <div class="sticky-top">
           <h4 class="sidebar-heading px-3 mb-1 pb-2 mt-5">
             <span>Blog posts</span>
           </h4>
@@ -71,21 +72,21 @@
         <section id="blog1">
           <h2>Inlägg 1</h2>
           <div>
-            <p>Här är lite text för inlägg nummer 1</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, aperiam, debitis cum deserunt quae adipisci ut maxime nulla ab dolorum asperiores vel praesentium mollitia, doloribus quibusdam nostrum quisquam aut itaque? Consectetur eum quidem nam adipisci cumque qui reprehenderit, id fugiat, laborum neque nobis asperiores expedita, in quibusdam minima voluptate? Voluptates, voluptas dolor. Explicabo nam dolorem cumque voluptas. Labore, dicta tempore cupiditate delectus perspiciatis debitis consequuntur voluptatum soluta optio facere, itaque tenetur, suscipit distinctio provident ratione! Culpa ex, illum ullam minus atque et autem porro obcaecati delectus unde libero, exercitationem provident ad? Officia possimus, natus esse in fugiat explicabo a maiores.</p>
           </div>
         </section>
 
         <section id="blog2">
           <h2>Inlägg 2</h2>
           <div>
-            <p>Här är lite text för inlägg nummer 2</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eaque ad, unde aspernatur, labore quas necessitatibus inventore at maxime corrupti nulla quis numquam provident, fugiat tempore laudantium ex laborum sed. Nam excepturi nisi alias soluta, fugit, voluptatum voluptates quos at quidem quae praesentium itaque earum veniam deleniti molestias nemo, consequuntur saepe iste possimus explicabo sequi. Nam illum earum ad esse ipsam eos sapiente distinctio. Nesciunt officiis inventore illo sed quaerat deleniti iure, corporis mollitia tempora? Voluptatibus perferendis maiores ea reprehenderit sit doloribus natus distinctio iste inventore ipsum deserunt sequi, voluptatum autem eum ut nulla repellendus. Assumenda delectus veritatis animi. Cum.</p>
           </div>
         </section>
 
         <section id="blog3">
           <h2>Inlägg 3</h2>
           <div>
-            <p>Här är lite text för inlägg nummer 2</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sunt officia nostrum laboriosam tenetur soluta doloremque tempora quis sequi, quod iusto possimus vero quisquam molestias deleniti quo inventore, dolor aut!</p>
           </div>
         </section>
 
