Fixade sidebaren. + smooth scrolling

--- a/blog.html
+++ b/blog.html
@@ -53,16 +53,16 @@
           </h4>
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a href="#blog1"> Inlägg 1 </a>
+              <a class="nav-link" href="#blog1"> Inlägg 1 </a>
             </li>
             <li class="nav-item">
-              <a href="#blog2"> Inlägg 2 </a>
+              <a class="nav-link" href="#blog2"> Inlägg 2 </a>
             </li>
             <li class="na-item">
-              <a href="#blog3"> Inlägg 3</a>
+              <a class="nav-link" href="#blog3"> Inlägg 3</a>
             </li>
             <li class="na-item">
-              <a href="#blog4"> Inlägg 4</a>
+              <a class="nav-link" href="#blog4"> Inlägg 4</a>
             </li>
           </ul>
         </div>
