La till Javascript för att fälla ut inlägg.

--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <title>Blogsidan</title>
     <link rel="stylesheet" href="/CSS/bootstrap.css" />
     <link rel="stylesheet" href="/CSS/style.css" />
-    <link rel="stylesheet" href="/CSS/blog.css">
+    <link rel="stylesheet" href="/CSS/blog.css" />
   </head>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -72,21 +72,77 @@
         <section id="blog1" class="border-bottom">
           <h2>Inlägg 1</h2>
           <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, aperiam, debitis cum deserunt quae adipisci ut maxime nulla ab dolorum asperiores vel praesentium mollitia, doloribus quibusdam nostrum quisquam aut itaque? Consectetur eum quidem nam adipisci cumque qui reprehenderit, id fugiat, laborum neque nobis asperiores expedita, in quibusdam minima voluptate? Voluptates, voluptas dolor. Explicabo nam dolorem cumque voluptas. Labore, dicta tempore cupiditate delectus perspiciatis debitis consequuntur voluptatum soluta optio facere, itaque tenetur, suscipit distinctio provident ratione! Culpa ex, illum ullam minus atque et autem porro obcaecati delectus unde libero, exercitationem provident ad? Officia possimus, natus esse in fugiat explicabo a maiores.</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi,
+              aperiam, debitis cum deserunt quae adipisci ut maxime nulla ab
+              dolorum asperiores vel praesentium mollitia, doloribus quibusdam
+              nostrum quisquam aut itaque? Consectetur eum quidem nam adipisci
+              cumque qui reprehenderit, id fugiat, laborum neque nobis
+              asperiores expedita, in quibusdam minima voluptate? Voluptates,
+              voluptas dolor. Explicabo nam dolorem cumque voluptas. Labore,
+              dicta tempore cupiditate delectus perspiciatis debitis
+              consequuntur voluptatum soluta optio facere, itaque tenetur,
+              suscipit distinctio provident ratione! Culpa ex, illum ullam minus
+              atque et autem porro obcaecati delectus unde libero,
+              exercitationem provident ad? Officia possimus, natus esse in
+              fugiat explicabo a maiores.
+            </p>
+          </div>
+          <div class="collapsed">
+            <p>
+              Nu är jag utfälld.
+            </p>
+          </div>
+          <div class="read-more">
+            <p class="text-secondary">Läs mer...</p>
           </div>
         </section>
 
         <section id="blog2" class="border-bottom">
           <h2>Inlägg 2</h2>
           <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eaque ad, unde aspernatur, labore quas necessitatibus inventore at maxime corrupti nulla quis numquam provident, fugiat tempore laudantium ex laborum sed. Nam excepturi nisi alias soluta, fugit, voluptatum voluptates quos at quidem quae praesentium itaque earum veniam deleniti molestias nemo, consequuntur saepe iste possimus explicabo sequi. Nam illum earum ad esse ipsam eos sapiente distinctio. Nesciunt officiis inventore illo sed quaerat deleniti iure, corporis mollitia tempora? Voluptatibus perferendis maiores ea reprehenderit sit doloribus natus distinctio iste inventore ipsum deserunt sequi, voluptatum autem eum ut nulla repellendus. Assumenda delectus veritatis animi. Cum.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+              eaque ad, unde aspernatur, labore quas necessitatibus inventore at
+              maxime corrupti nulla quis numquam provident, fugiat tempore
+              laudantium ex laborum sed. Nam excepturi nisi alias soluta, fugit,
+              voluptatum voluptates quos at quidem quae praesentium itaque earum
+              veniam deleniti molestias nemo, consequuntur saepe iste possimus
+              explicabo sequi. Nam illum earum ad esse ipsam eos sapiente
+              distinctio. Nesciunt officiis inventore illo sed quaerat deleniti
+              iure, corporis mollitia tempora? Voluptatibus perferendis maiores
+              ea reprehenderit sit doloribus natus distinctio iste inventore
+              ipsum deserunt sequi, voluptatum autem eum ut nulla repellendus.
+              Assumenda delectus veritatis animi. Cum.
+            </p>
+          </div>
+          <div class="collapsed">
+            <p>
+              Nu är jag utfälld.
+            </p>
+          </div>
+          <div class="read-more">
+            <p class="text-secondary">Läs mer...</p>
           </div>
         </section>
 
         <section id="blog3" class="border-bottom">
           <h2>Inlägg 3</h2>
           <div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sunt officia nostrum laboriosam tenetur soluta doloremque tempora quis sequi, quod iusto possimus vero quisquam molestias deleniti quo inventore, dolor aut!</p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Quibusdam sunt officia nostrum laboriosam tenetur soluta
+              doloremque tempora quis sequi, quod iusto possimus vero quisquam
+              molestias deleniti quo inventore, dolor aut!
+            </p>
+          </div>
+          <div class="collapsed">
+            <p>
+              Nu är jag utfälld.
+            </p>
+          </div>
+          <div class="read-more">
+            <p class="text-secondary">Läs mer...</p>
           </div>
         </section>
 
@@ -95,9 +151,23 @@
           <div>
             <p>Här är lite text för inlägg nummer 2</p>
           </div>
+          <div class="collapsed">
+            <p>
+              Nu är jag utfälld.
+            </p>
+          </div>
+          <div class="read-more">
+            <p class="text-secondary">Läs mer...</p>
+          </div>
         </section>
       </main>
     </div>
+    <script src="/js/blog.js"></script>
     <script src="/js/bootstrap.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
