--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link active" aria-current="page" href="/"
                 ><img src="img/dog-face.ico" style="width: 20px" /> Home</a
               >
             </li>
