--- a/blog.html
+++ b/blog.html
@@ -45,122 +45,117 @@
     </nav>
   </header>
   <body>
-    <div class="row">
-      <nav class="sidebar col-md-3 col-lg-2 p-0">
-        <div class="sticky-top">
-          <h4 class="sidebar-heading px-3 mb-1 pb-2 mt-5">
-            <span>Blog posts</span>
-          </h4>
-          <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link" href="#blog1"> Inlägg 1 </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#blog2"> Inlägg 2 </a>
-            </li>
-            <li class="na-item">
-              <a class="nav-link" href="#blog3"> Inlägg 3</a>
-            </li>
-            <li class="na-item">
-              <a class="nav-link" href="#blog4"> Inlägg 4</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+    <div class="container">
+      <div class="row">
+        <nav class="sidebar col-md-3 col-lg-2 p-0">
+          <div class="sticky-top">
+            <h4 class="sidebar-heading px-3 mb-1 pb-2 mt-5">
+              <span class="border-bottom">Blog posts</span>
+            </h4>
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link" href="#blog1"> Inlägg 1 </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#blog2"> Inlägg 2 </a>
+              </li>
+              <li class="na-item">
+                <a class="nav-link" href="#blog3"> Inlägg 3</a>
+              </li>
+              <li class="na-item">
+                <a class="nav-link" href="#blog4"> Inlägg 4</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
 
-      <main class="col-md-9 col-lg-10 ml-sm-auto px-md-4 mt-4">
-        <section id="blog1" class="border-bottom">
-          <h2>Inlägg 1</h2>
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi,
-              aperiam, debitis cum deserunt quae adipisci ut maxime nulla ab
-              dolorum asperiores vel praesentium mollitia, doloribus quibusdam
-              nostrum quisquam aut itaque? Consectetur eum quidem nam adipisci
-              cumque qui reprehenderit, id fugiat, laborum neque nobis
-              asperiores expedita, in quibusdam minima voluptate? Voluptates,
-              voluptas dolor. Explicabo nam dolorem cumque voluptas. Labore,
-              dicta tempore cupiditate delectus perspiciatis debitis
-              consequuntur voluptatum soluta optio facere, itaque tenetur,
-              suscipit distinctio provident ratione! Culpa ex, illum ullam minus
-              atque et autem porro obcaecati delectus unde libero,
-              exercitationem provident ad? Officia possimus, natus esse in
-              fugiat explicabo a maiores.
-            </p>
-          </div>
-          <div class="collapsed">
-            <p>
-              Nu är jag utfälld.
-            </p>
-          </div>
-          <div class="read-more">
-            <p class="text-secondary">Läs mer...</p>
-          </div>
-        </section>
+        <main class="col-md-9 col-lg-10 ml-sm-auto px-md-4 mt-4">
+          <section id="blog1" class="border-bottom mb-4">
+            <h2 class="mt-4 mb-4">Inlägg 1</h2>
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi,
+                aperiam, debitis cum deserunt quae adipisci ut maxime nulla ab
+                dolorum asperiores vel praesentium mollitia, doloribus quibusdam
+                nostrum quisquam aut itaque? Consectetur eum quidem nam adipisci
+                cumque qui reprehenderit, id fugiat, laborum neque nobis
+                asperiores expedita, in quibusdam minima voluptate? Voluptates,
+                voluptas dolor. Explicabo nam dolorem cumque voluptas. Labore,
+                dicta tempore cupiditate delectus perspiciatis debitis
+                consequuntur voluptatum soluta optio facere, itaque tenetur,
+                suscipit distinctio provident ratione! Culpa ex, illum ullam
+                minus atque et autem porro obcaecati delectus unde libero,
+                exercitationem provident ad? Officia possimus, natus esse in
+                fugiat explicabo a maiores.
+              </p>
+            </div>
+            <div class="collapsed">
+              <p>Nu är jag utfälld.</p>
+            </div>
+            <div class="read-more">
+              <p class="text-secondary">Läs mer...</p>
+            </div>
+          </section>
 
-        <section id="blog2" class="border-bottom">
-          <h2>Inlägg 2</h2>
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
-              eaque ad, unde aspernatur, labore quas necessitatibus inventore at
-              maxime corrupti nulla quis numquam provident, fugiat tempore
-              laudantium ex laborum sed. Nam excepturi nisi alias soluta, fugit,
-              voluptatum voluptates quos at quidem quae praesentium itaque earum
-              veniam deleniti molestias nemo, consequuntur saepe iste possimus
-              explicabo sequi. Nam illum earum ad esse ipsam eos sapiente
-              distinctio. Nesciunt officiis inventore illo sed quaerat deleniti
-              iure, corporis mollitia tempora? Voluptatibus perferendis maiores
-              ea reprehenderit sit doloribus natus distinctio iste inventore
-              ipsum deserunt sequi, voluptatum autem eum ut nulla repellendus.
-              Assumenda delectus veritatis animi. Cum.
-            </p>
-          </div>
-          <div class="collapsed">
-            <p>
-              Nu är jag utfälld.
-            </p>
-          </div>
-          <div class="read-more">
-            <p class="text-secondary">Läs mer...</p>
-          </div>
-        </section>
+          <section id="blog2" class="border-bottom mb-4">
+            <h2 class="mb-4">Inlägg 2</h2>
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate eaque ad, unde aspernatur, labore quas necessitatibus
+                inventore at maxime corrupti nulla quis numquam provident,
+                fugiat tempore laudantium ex laborum sed. Nam excepturi nisi
+                alias soluta, fugit, voluptatum voluptates quos at quidem quae
+                praesentium itaque earum veniam deleniti molestias nemo,
+                consequuntur saepe iste possimus explicabo sequi. Nam illum
+                earum ad esse ipsam eos sapiente distinctio. Nesciunt officiis
+                inventore illo sed quaerat deleniti iure, corporis mollitia
+                tempora? Voluptatibus perferendis maiores ea reprehenderit sit
+                doloribus natus distinctio iste inventore ipsum deserunt sequi,
+                voluptatum autem eum ut nulla repellendus. Assumenda delectus
+                veritatis animi. Cum.
+              </p>
+            </div>
+            <div class="collapsed">
+              <p>Nu är jag utfälld.</p>
+            </div>
+            <div class="read-more">
+              <p class="text-secondary">Läs mer...</p>
+            </div>
+          </section>
 
-        <section id="blog3" class="border-bottom">
-          <h2>Inlägg 3</h2>
-          <div>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Quibusdam sunt officia nostrum laboriosam tenetur soluta
-              doloremque tempora quis sequi, quod iusto possimus vero quisquam
-              molestias deleniti quo inventore, dolor aut!
-            </p>
-          </div>
-          <div class="collapsed">
-            <p>
-              Nu är jag utfälld.
-            </p>
-          </div>
-          <div class="read-more">
-            <p class="text-secondary">Läs mer...</p>
-          </div>
-        </section>
+          <section id="blog3" class="border-bottom mb-4">
+            <h2 class="mb-4">Inlägg 3</h2>
+            <div>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Quibusdam sunt officia nostrum laboriosam tenetur soluta
+                doloremque tempora quis sequi, quod iusto possimus vero quisquam
+                molestias deleniti quo inventore, dolor aut!
+              </p>
+            </div>
+            <div class="collapsed">
+              <p>Nu är jag utfälld.</p>
+            </div>
+            <div class="read-more">
+              <p class="text-secondary">Läs mer...</p>
+            </div>
+          </section>
 
-        <section id="blog4" class="border-bottom">
-          <h2>Inlägg 4</h2>
-          <div>
-            <p>Här är lite text för inlägg nummer 2</p>
-          </div>
-          <div class="collapsed">
-            <p>
-              Nu är jag utfälld.
-            </p>
-          </div>
-          <div class="read-more">
-            <p class="text-secondary">Läs mer...</p>
-          </div>
-        </section>
-      </main>
+          <section id="blog4" class="border-bottom mb-4">
+            <h2 class="mb-4">Inlägg 4</h2>
+            <div>
+              <p>Här är lite text för inlägg nummer 2</p>
+            </div>
+            <div class="collapsed">
+              <p>Nu är jag utfälld.</p>
+            </div>
+            <div class="read-more">
+              <p class="text-secondary">Läs mer...</p>
+            </div>
+          </section>
+        </main>
+      </div>
     </div>
     <script src="/js/blog.js"></script>
     <script src="/js/bootstrap.js"></script>
