--- a/blog.html
+++ b/blog.html
@@ -70,6 +70,56 @@
         </nav>
 
         <main class="col-md-9 col-lg-10 ml-sm-auto px-md-4 mt-4">
+          <div
+            id="karusellen"
+            class="carousel slide"
+            data-bs-ride="carousel"
+            data-bs-keyboard="true"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="img/hund1338.jpg"
+                  class="d-block w-100 rounded"
+                  style="height: 500px"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="img/hund1337.jpg"
+                  class="d-block w-100 rounded"
+                  style="height: 500px"
+                  alt="..."
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#karusellen"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#karusellen"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
           <section id="blog1" class="border-bottom mb-4">
             <h2 class="mt-4 mb-4">Inlägg 1</h2>
             <div>
@@ -158,10 +208,14 @@
       </div>
     </div>
     <script src="/js/blog.js"></script>
-    <script src="/js/bootstrap.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
   </body>
