--- a/ourdogs.html
+++ b/ourdogs.html
@@ -23,11 +23,11 @@
               <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><img src="img/dog-face.ico" style="width: 20px;">
+                    <a class="nav-link" href="/Index.html"><img src="img/dog-face.ico" style="width: 20px;">
                       Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/ourdogs.html">Our dogs</a>
+                    <a class="nav-link" aria-current="page" href="/ourdogs.html">Our dogs</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/aboutus.html">Who we are</a>
