--- a/luna.html
+++ b/luna.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="/css/bootstrap.css">
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="/css/bootstrap-grid.css">
+        <link rel="stylesheet" href="/css/product.css">
         <link rel="shortcut icon" type="image/x-icon" href="img/dog-face.ico">
     </head>
 
@@ -53,27 +54,25 @@
     
                 <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                <div class="carousel-item active my-slide">
+                <div class="carousel-item active">
                   <div class="img-number">1 / 3</div>
                 <img src="img/luna2.jpg" alt="First slide" class="d-block mx-auto" width="50%">
                 </div>
-                <div class="carousel-item my-slide">
+                <div class="carousel-item">
                   <div class="img-number">2 / 3</div>
                 <img src="img/hund3.jpg" alt="Second slide" class="d-block mx-auto" width="50%">
                 </div>
-                <div class="carousel-item my-slide">
+                <div class="carousel-item">
                   <div class="img-number">3 / 3</div>
                 <img src="img/hund4.jpg" alt="Third slide" class="d-block mx-auto" width="50%">
                 </div>
                 </div>
                 </div>
-                <a class="carousel-control-prev " href="#carouselControls" role="button" data-bs-slide="prev">
+                <a class="carousel-control-prev prev" href="#carouselControls" role="button" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only"></span>
                 </a>
                 <a class="carousel-control-next next" href="#carouselControls" role="button" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only"></span>
                 </a>
                 </div>
                 </div>
