--- a/ourdogs.html
+++ b/ourdogs.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="/css/bootstrap.css">
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="/css/bootstrap-grid.css">
+        <link rel="stylesheet" href="/css/product.css">
         <link rel="shortcut icon" type="image/x-icon" href="img/dog-face.ico">
     </head>
 
