--- a/aurora.html
+++ b/aurora.html
@@ -50,7 +50,7 @@
               </div>
               
               <div class="container-slideshow">
-                <h2 class="title text-center mt-lg-3"> Lorem, ipsum.</h2>
+                <h2 class="title">Aurora</h2>
     
                 <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
