--- a/ourdogs.html
+++ b/ourdogs.html
@@ -53,7 +53,7 @@
                       <a href="/aurora.html">
                         <img src="img/valp1.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
                         <div class="image-text text-center">
-                           <h3>Lorem, ipsum.</h3>
+                           <h3>Aurora</h3>
                       </a>
                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, ab.</p>
                         </div>
@@ -62,7 +62,7 @@
                       <a href="/kenzo.html">
                         <img src="img/valp2.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
                         <div class="image-text text-center">
-                           <h3>Lorem, ipsum.</h3>
+                           <h3>Kenzo</h3>
                       </a>     
                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, laboriosam.</p>
                         </div>
@@ -71,7 +71,7 @@
                       <a href="/luna.html">
                         <img src="img/valp3.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
                         <div class="image-text text-center">
-                           <h3>Lorem, ipsum.</h3>
+                           <h3>Luna</h3>
                       </a>
                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, soluta.</p>
                         </div>
