--- a/organisation.html
+++ b/organisation.html
@@ -45,16 +45,17 @@
         </nav>
       </header>
 <div class="tophead">
-  <h1>Organisation</h1>
-  <p><h3>Our coworkers</h3></p> 
+  <img src="/HTML_CSS_projektarbete/img/hund.jpg" class="responsive" alt="banner">  
+  <div class="centered"><h1>Organisation</h1></div>
+  <div class="centered2"><p><h3>Our coworkers</h3></p></div>
 </div>
 <div class="container mt-5 bg-light">
   <div class="row">
     <div class="container col-sm-4 border border-5 border-white">
       <div class="text-center">
       <h3 class="karl">Karl</h3>
-      <a href="/HTML_CSS_projektarbete/karl.html">
-      <img src="/HTML_CSS_projektarbete/img/kalle.jpg" class="rounded" alt="Cinque Terre" width="300px" height="450px"></a>
+      <a href="/HTML_CSS_projektarbete/karl.html">        
+      <img src="/HTML_CSS_projektarbete/img/kalle.jpg" class="responsive" alt="karl"></a>    
       </div>
       <br>
       <p>Karl som förutom intresset för hundar brinner för att hålla trädgården i snyggt skick</p>
@@ -65,7 +66,7 @@
       <div class="text-center">
       <h3 class="erika">Erika</h3>
       <a href="/HTML_CSS_projektarbete/erika.html">
-      <img src="/HTML_CSS_projektarbete/img/erica.jpg" class="rounded" alt="Cinque Terre" width="300px" height="450px"></a>
+      <img src="/HTML_CSS_projektarbete/img/erica.jpg" class="responsive" alt="erika" width="300px" height="450px"></a>
       </div>
       <br>
       <p>Erika som brukar mecka med gamla amerikanska bilar när hon inte håller på med hundarna</p>
@@ -76,7 +77,7 @@
       <div class="text-center">
       <h3 class="egon">Egon</h3>  
       <a href="/HTML_CSS_projektarbete/egon.html">      
-      <img src="/HTML_CSS_projektarbete/img/egon.jpg" class="rounded" alt="Cinque Terre" width="350px" height="450px"></a>
+      <img src="/HTML_CSS_projektarbete/img/egon.jpg" class="responsive" alt="egon" width="350px" height="450px"></a>
       </div>
       <br>
       <p>jobbar pluggar på teknik på gymnasiet och egentligen är ganska trött på alla hundar</p>
