--- a/erika.html
+++ b/erika.html
@@ -44,8 +44,9 @@
         </nav>
       </header>
       <div class="tophead">
-        <h1>Erikas</h1>
-        <p><h3>Profil</h3></p> 
+        <img src="/HTML_CSS_projektarbete/img/hund.jpg" class="responsive" alt="banner">  
+        <div class="centered"><h1>Erikas</h1></div>
+        <div class="centered2"><p><h3>Profil</h3></p></div>
       </div>
       <div class="carousel-container">
         <i class="fas fa-arrow-left" id="prevBtn"></i>
