--- a/organisation.html
+++ b/organisation.html
@@ -55,34 +55,38 @@
       <div class="text-center">
       <h3 class="karl">Karl</h3>
       <a href="/HTML_CSS_projektarbete/karl.html">        
-      <img src="/HTML_CSS_projektarbete/img/kalle.jpg" class="responsive" alt="karl"></a>    
+      <img src="/HTML_CSS_projektarbete/img/kalle.jpg" class="responsive" alt="karl" width="320px" height="450px" ></a>    
       </div>
       <br>
-      <p>Karl som förutom intresset för hundar brinner för att hålla trädgården i snyggt skick</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <p><h5>Karl som förutom intresset för hundar brinner för att hålla trädgården i snyggt skick</h5></p>
+      <p><strong>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</strong></p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore est voluptates quasi ducimus totam qui modi consequuntur ex corporis velit.</p>
+      <a href="karl.html" class="btn btn-primary btn-sm">Karls profil></a>
     </div>
     <div class="container col-sm-4 border border-5 border-white">
       <div class="text-center">
       <h3 class="erika">Erika</h3>
       <a href="/HTML_CSS_projektarbete/erika.html">
-      <img src="/HTML_CSS_projektarbete/img/erica.jpg" class="responsive" alt="erika" width="300px" height="450px"></a>
+      <img src="/HTML_CSS_projektarbete/img/erica.jpg" class="responsive" alt="erika" width="320px" height="450px"></a>
       </div>
       <br>
-      <p>Erika som brukar mecka med gamla amerikanska bilar när hon inte håller på med hundarna</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <p><h5>Erika som brukar mecka med gamla amerikanska bilar när hon inte håller på med hundarna</h5></p>
+      <p><strong>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</strong></p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam vel molestias maiores ut quaerat ex eum praesentium, optio officiis non!</p>
+      <a href="/HTML_CSS_projektarbete/erika.html" class="btn btn-primary btn-sm">Erikas profil></a>
     </div>
     <div class="container col-sm-4 border border-5 border-white">
       <div class="text-center">
       <h3 class="egon">Egon</h3>  
       <a href="/HTML_CSS_projektarbete/egon.html">      
-      <img src="/HTML_CSS_projektarbete/img/egon.jpg" class="responsive" alt="egon" width="350px" height="450px"></a>
+      <img src="/HTML_CSS_projektarbete/img/egon.jpg" class="responsive" alt="egon" width="320px" height="450px"></a>
       </div>
       <br>
-      <p>jobbar pluggar på teknik på gymnasiet och egentligen är ganska trött på alla hundar</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <p><h5>jobbar pluggar på teknik på gymnasiet och egentligen är ganska trött på alla hundar</h5></p>
+      <p><strong>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</strong></p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, odit. Quam consequatur aliquid officia amet quod asperiores facilis minima officiis?</p>
+      <br>
+      <a href="/HTML_CSS_projektarbete/egon.html" class="btn btn-primary btn-sm">Egons profil></a>
     </div>
   </div>
 </div>
