--- a/karl.html
+++ b/karl.html
@@ -45,8 +45,9 @@
         </nav>
       </header>
       <div class="tophead">
-        <h1>Karls</h1>
-        <p><h3>Profil</h3></p> 
+        <img src="/HTML_CSS_projektarbete/img/hund.jpg" class="responsive" alt="banner">  
+        <div class="centered"><h1>Karls</h1></div>
+        <div class="centered2"><p><h3>Profil</h3></p></div>
       </div>
 
       <div class="carousel-container">
