--- a/ourdogs.html
+++ b/ourdogs.html
@@ -52,8 +52,8 @@
                     <div class="col-4 mt-4">
                       <a href="/aurora.html">
                         <img src="img/valp1.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
-                        <div class="image-text text-center">
-                           <h3>Aurora</h3>
+                        <div class="img-text text-center">
+                           <h3 class="mt-2 border-bottom">Aurora</h3>
                       </a>
                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, ab.</p>
                         </div>
@@ -61,8 +61,8 @@
                     <div class="col-4 mt-4">
                       <a href="/kenzo.html">
                         <img src="img/valp2.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
-                        <div class="image-text text-center">
-                           <h3>Kenzo</h3>
+                        <div class="img-text text-center">
+                           <h3 class="mt-2 border-bottom">Kenzo</h3>
                       </a>     
                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, laboriosam.</p>
                         </div>
@@ -70,8 +70,8 @@
                     <div class="col-4 mt-4">
                       <a href="/luna.html">
                         <img src="img/valp3.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
-                        <div class="image-text text-center">
-                           <h3>Luna</h3>
+                        <div class="img-text text-center">
+                           <h3 class="mt-2 border-bottom">Luna</h3>
                       </a>
                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, soluta.</p>
                         </div>
