--- a/ourdogs.html
+++ b/ourdogs.html
@@ -49,7 +49,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-4 mt-4">
+                    <div class="col-3 mt-4 img-border">
                       <a href="/aurora.html">
                         <img src="img/valp1.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
                         <div class="img-text text-center">
@@ -58,7 +58,7 @@
                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, ab.</p>
                         </div>
                     </div>
-                    <div class="col-4 mt-4">
+                    <div class="col-3 mt-4 img-border">
                       <a href="/kenzo.html">
                         <img src="img/valp2.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
                         <div class="img-text text-center">
@@ -67,7 +67,7 @@
                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, laboriosam.</p>
                         </div>
                     </div>
-                    <div class="col-4 mt-4">
+                    <div class="col-3 mt-4 img-border">
                       <a href="/luna.html">
                         <img src="img/valp3.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
                         <div class="img-text text-center">
